<resources>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="input_error">Invalid input.</string>
    <string name="permissions_denied">Cavity needs these authorizations to take pictures.</string>
    <string name="permissions_denied_external">Cavity needs these authorizations to work.</string>
    <string name="persistent_permission_error">Unable to open the file correctly.</string>
    <string name="tasting_channel_text">Tasting reminders</string>
    <string name="warning">Warning !</string>
    <string name="locale">en</string>
    <string name="unknown">Unknown</string>
    <string name="all">All</string>
    <string name="edit">Edit</string>
    <string name="empty_county_name">Please enter a region name.</string>
    <string name="no_county">No region selected.</string>
    <string name="no_friend">No friend selected.</string>
    <string name="county_already_exists">This region already exists.</string>
    <string name="no_file_explorer">No file explorer application found.</string>
    <string name="base_error">An error has occurred.</string>
    <string name="required_field">Required field.</string>
    <string name="require_integer">Integer only.</string>
    <string name="require_float">Numerical value only.</string>
    <string name="empty_contest_name">Please enter a contest name.</string>
    <string name="empty_grape_name">Please enter a grape variety.</string>
    <string name="empty_tag_name">Please enter a tag name.</string>
    <string name="grape_already_exists">This grape variety already exists.</string>
    <string name="contest_name_already_exists">This contest already exists.</string>
    <string name="friend_already_exists">This friend already exists.</string>
    <string name="tag_already_exists">This tag already exists.</string>
    <string name="no_negative">Enter a positive number.</string>
    <string name="camera_error">Camera initialization failed.</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="weak_pwd">The password must contain a capital letter, a number and be more than 5 characters.</string>
    <string name="app_name">Cavity</string>
    <string name="consumed">This bottle has been drunk.</string>
    <string name="home">Home</string>
    <string name="add_wine">Add wine</string>
    <string name="add_bottle">Add bottle</string>
    <string name="delete_wine">Delete the wine and its bottles</string>
    <string name="edit_wine">Edit wine</string>
    <string name="edit_wine_title">Modifier un vin</string>
    <string name="tasting">Tasting</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="bio_wine">Organic wine</string>
    <string name="wine_photo">Wine photo</string>
    <string name="add_photo">Add photo</string>
    <string name="take_photo">Photograph</string>
    <string name="toggle_torch">Toggle torch</string>
    <string name="naming">Appellation</string>
    <string name="name">Name</string>
    <string name="county">Region</string>
    <string name="identification">Identification</string>
    <string name="color">Color</string>
    <string name="cuvee">Cuvee</string>
    <string name="organic">Organic</string>
    <string name="organic_wine">Organic wine</string>
    <string name="add_county">Add region</string>
    <string name="wine_added">The wine has been added.</string>
    <string name="wine_updated">The wine has been edited.</string>
    <string name="wine_deleted">The wine has been deleted.</string>
    <string name="wine_already_exists">This wine already exists.</string>
    <string name="wine_already_exists_emergence">This wine already exists. It has been reintroduced.</string>
    <string name="wine_color_white">White</string>
    <string name="wine_color_red">Red</string>
    <string name="wine_color_sweet">Sweet</string>
    <string name="wine_color_rose">Rosé</string>
    <string name="confirm_wine_delete">Delete the wine and discard its bottles ?</string>
    <string name="empty_wine">Add a wine to start managing your stock</string>
    <string name="default_bottle_quantity">1</string>
    <string name="vintage">Vintage</string>
    <string name="date">Dates</string>
    <string name="apogee">Peaking</string>
    <string name="count">Number</string>
    <string name="count_limit">Maximum: 20</string>
    <string name="grapes">Grape varieties</string>
    <string name="grape_name">Grape variety name</string>
    <string name="select_grapes">Select the grape varieties</string>
    <string name="skip">Skip</string>
    <string name="add_grape">Add grape variety</string>
    <string name="empty_grape_explanation">Choose the grape varieties contained in this bottle, or create new ones if they are missing</string>
    <string name="percentage">%1$d %%</string>
    <string name="buying">Purchase</string>
    <string name="price">Price</string>
    <string name="currency">Currency</string>
    <string name="buying_location">Purchase location</string>
    <string name="capacity">Capacity</string>
    <string name="buying_date">Purchase date</string>
    <string name="contest_name">Contest name</string>
    <string name="add_review">Add contest</string>
    <string name="empty_review_explanation">Enter the ratings and contests for this bottle, or create new ones if they are missing</string>
    <string name="reviews">Contests</string>
    <string name="select_reviews">Choose a review</string>
    <string name="rate100">100</string>
    <string name="rate20">20</string>
    <string name="star1">1 star</string>
    <string name="star2">2 star</string>
    <string name="star3">3 star</string>
    <string name="rate">Rating</string>
    <string name="bronze">Bronze</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="item_rate">%1$d / %2$d</string>
    <string name="other_info">Other informations</string>
    <string name="storage_location">Storage location</string>
    <string name="alcohol">Alcohol</string>
    <string name="optionnal">Optionnal</string>
    <string name="inquire_add_to_favorites">Add to preferred</string>
    <string name="favorite">Preferred</string>
    <string name="add_pdf">Add PDF file</string>
    <string name="pdf">PDF</string>
    <string name="medal_color">Medal color</string>
    <string name="size_slim">37.5 cL</string>
    <string name="size_small">50 cL</string>
    <string name="size_normal">75 cL</string>
    <string name="size_magnum">1.5 L</string>
    <string name="gifted_by_friend">Given by friends</string>
    <string name="add_friend">Add friend</string>
    <string name="add_friend_label">Last name Firt name</string>
    <string name="remove_pdf">Remove PDF</string>
    <string name="bottle_added">The bottle has been added.</string>
    <string name="bottles_added">The bottles have been added.</string>
    <string name="bottle_updated">The bottle has been edited.</string>
    <string name="placeholder_friend">No friend.</string>
    <string name="click_to_select_friend">Pick friends</string>
    <string name="documents_title">Documents</string>
    <string name="sort_friend_frequence">Sort by frequency</string>
    <string name="sort_friend_alphabetical">Sort alphabetically</string>
    <string name="search_wine_hint">Wine name, appellation…</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="ready_to_drink">Ready to drink</string>
    <string name="buying_date_beyond">Purchased after</string>
    <string name="buying_date_until">Purchased before</string>
    <string name="no_price_no_results">Bottles without a price tag will not be displayed.</string>
    <string name="query_feedback">\'%1$s\'</string>
    <string name="selected_bottles">Selected botttles (%1$d)</string>
    <string name="empty_search">No result</string>
    <string name="filter_consumed">Drunk</string>
    <string name="drunk_with">Drunk with</string>
    <string name="sorted_by">Sorted by</string>
    <string name="reverse_sort">Reverse sort</string>
    <string name="no_sort">Unsorted</string>
    <string name="edit_bottle">Edit bottle</string>
    <string name="taste">Taste</string>
    <string name="price_and_currency">%1$s %2$s</string>
    <string name="show_pdf">Open PDF</string>
    <string name="show_history">Show history</string>
    <string name="show_history_wine">Show wine history</string>
    <string name="no_pdf">No PDF for this bottle.</string>
    <string name="no_pdf_app">No pdf reader found on the phone.</string>
    <string name="labeled_data">Icon</string>
    <string name="expert_advice">Ratings &amp; contests</string>
    <string name="gift_to">Give</string>
    <string name="gift_to_who">Choose someone to give the bottle to.</string>
    <string name="consume_bottle">Taste a bottle</string>
    <string name="gift_bottle">Give a bottle</string>
    <string name="tasting_comment">Tasting comment</string>
    <string name="consume_date">Drink date</string>
    <string name="consumed_with">Who do you drink this bottle with ?</string>
    <string name="bottle_consumed">The bottle has been drunk.</string>
    <string name="bottle_gifted">The bottle has been given.</string>
    <string name="gift_date">Received on</string>
    <string name="delete_bottle">Remove the bottle</string>
    <string name="delete_bottle_warning">In the event of loss or error, you may remove the bottle. It will no longer appear in the inventory or in the history.</string>
    <string name="confirm_bottle_delete">Do you really want to remove the bottle ?</string>
    <string name="bottle_used_in_tasting">This bottle is used in a tasting.</string>
    <string name="retire">Withdraw</string>
    <string name="back_in_stock">Bottle back in stock.</string>
    <string name="tasting_log">Journal de dégustation</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="add_tag">Add a tag</string>
    <string name="empty_tag">No tags</string>
    <string name="tag_removed_from_bottle">Tag removed from bottle.</string>
    <string name="tag_explanation">You can create and assign tags to bottles in order to group them according to your own criteria. Example: GCC (Grand Cru Classé), fish (pairs well with fish).</string>
    <string name="rename_tag">Rename tag</string>
    <string name="tag_updated">Tag updated.</string>
    <string name="manager">Gestionnaire</string>
    <string name="counties">Regions</string>
    <string name="rename">Rename</string>
    <string name="rename_county">Rename the region</string>
    <string name="rename_grape">Rename the variety of wine</string>
    <string name="rename_review">Rename the review</string>
    <string name="rename_friend">Rename a friend</string>
    <string name="delete_county_warn">Deleting this region will delete all bottles and history entries related to this region. To confirm, enter the name of the region to be deleted.</string>
    <string name="confirm_grape_delete">Delete the variety of wine ?</string>
    <string name="confirm_review_delete">Delete rating/contest ?</string>
    <string name="confirm_friend_delete">Delete friend ?</string>
    <string name="county_deleted">Region deleted.</string>
    <string name="county_renamed">Region renamed.</string>
    <string name="county_added">Region added.</string>
    <string name="grape_deleted">Grape variety deleted.</string>
    <string name="grape_renamed">Grape variety renamed.</string>
    <string name="grape_added">Grape variety added.</string>
    <string name="review_deleted">Review deleted.</string>
    <string name="friends">Friends</string>
    <string name="stats">Statistics</string>
    <string name="cavity_account">Cavity account</string>
</resources>