<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_dest"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/tasting_dest"
            android:icon="@drawable/ic_toast_wine"
            android:title="@string/tasting" />

        <item
            android:id="@+id/search_dest"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />

        <item
            android:id="@+id/manager_dest"
            android:icon="@drawable/ic_manager"
            android:title="@string/manager" />

        <item
            android:id="@+id/history_dest"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />

        <item
            android:id="@+id/account_dest"
            android:icon="@drawable/ic_person"
            android:title="@string/cavity_account" />

        <item
            android:id="@+id/stats_dest"
            android:icon="@drawable/ic_chart"
            android:title="@string/stats" />

        <item
            android:id="@+id/settings_dest"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

    </group>
</menu>
