<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_margin"
    app:cardBackgroundColor="#12000000"
    app:cardElevation="0dp"
    app:strokeColor="@color/cardview_stroke"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/contestName"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:ellipsize="end"
            app:layout_constraintEnd_toStartOf="@id/deleteReview"
            app:layout_constraintStart_toEndOf="@id/medal"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Concours Parker" />

        <ImageView
            android:id="@+id/medal"
            android:layout_width="@dimen/medium_icon"
            android:layout_height="@dimen/medium_icon"
            android:layout_margin="@dimen/small_margin"
            android:contentDescription="@string/medal_color"
            android:src="@drawable/ic_grade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:tint="@color/medal_gold" />

        <ImageButton
            android:id="@+id/deleteReview"
            android:layout_width="@dimen/medium_icon"
            android:layout_height="@dimen/medium_icon"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_close"
            android:tint="?attr/colorError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/rbGroupMedal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/deleteReview"
            app:layout_constraintStart_toEndOf="@id/medal"
            app:layout_constraintTop_toBottomOf="@id/medal"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/rbBronze"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bronze" />

            <Button
                android:id="@+id/rbSilver"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/silver" />

            <Button
                android:id="@+id/rbGold"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gold" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rateLayout"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rbGroupType">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rate"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
