<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/divider1"
            style="@style/Widget.Cavity.Divider"
            android:layout_marginTop="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:text="@string/date"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <TextView
            android:id="@+id/vintageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:text="@string/vintage"
            android:textAppearance="?attr/textAppearanceCaption"
            app:layout_constraintEnd_toEndOf="@id/vintage"
            app:layout_constraintStart_toStartOf="@id/vintage"
            app:layout_constraintTop_toBottomOf="@id/dateTitle" />

        <NumberPicker
            android:id="@+id/vintage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:textAppearance="?attr/textAppearanceCaption"
            app:layout_constraintEnd_toStartOf="@id/apogee"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vintageText" />

        <TextView
            android:id="@+id/apogeeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:text="@string/apogee"
            android:textAppearance="?attr/textAppearanceCaption"
            app:layout_constraintEnd_toEndOf="@id/apogee"
            app:layout_constraintStart_toStartOf="@id/apogee"
            app:layout_constraintTop_toBottomOf="@id/dateTitle" />

        <NumberPicker
            android:id="@+id/apogee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            app:layout_constraintEnd_toStartOf="@id/countLayout"
            app:layout_constraintStart_toEndOf="@id/vintage"
            app:layout_constraintTop_toBottomOf="@id/apogeeText" />

        <com.louis.app.cavity.ui.widget.RuledTextInputLayout
            android:id="@+id/countLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="@+id/vintage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/apogee"
            app:layout_constraintTop_toTopOf="@+id/vintage"
            app:rule="required|integer|positive">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/count"
                android:inputType="number"
                android:maxLength="5"
                android:nextFocusDown="@id/price"
                android:text="@string/default_bottle_quantity" />

        </com.louis.app.cavity.ui.widget.RuledTextInputLayout>

        <View
            android:id="@+id/divider2"
            style="@style/Widget.Cavity.Divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vintage" />

        <TextView
            android:id="@+id/priceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:text="@string/buying"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <com.louis.app.cavity.ui.widget.RuledTextInputLayout
            android:id="@+id/priceLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            app:layout_constraintEnd_toStartOf="@+id/currencyLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceTitle"
            app:rule="floating|positive"
            app:startIconDrawable="@drawable/ic_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:nextFocusDown="@id/buyLocation"
                app:errorEnabled="true" />

        </com.louis.app.cavity.ui.widget.RuledTextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/currencyLayout"
            style="@style/Widget.Cavity.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/priceLayout"
            app:layout_constraintTop_toBottomOf="@+id/priceTitle"
            app:startIconDrawable="@drawable/ic_currency">

            <AutoCompleteTextView
                android:id="@+id/currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/currency"
                android:inputType="none"
                android:nextFocusDown="@id/buyLocation" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/buyLocationLayout"
            style="@style/Widget.Cavity.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceLayout"
            app:startIconDrawable="@drawable/ic_location">

            <AutoCompleteTextView
                android:id="@+id/buyLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/buying_location"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:nextFocusDown="@id/buyDate" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.louis.app.cavity.ui.widget.RuledTextInputLayout
            android:id="@+id/buyDateLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buyLocationLayout"
            app:rule="required"
            app:startIconDrawable="@drawable/ic_calendar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/buyDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/buying_date"
                android:inputType="none" />

        </com.louis.app.cavity.ui.widget.RuledTextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
